# api-mongo-swbox

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  state.rs
src/logs/: models.rs  services.rs
src/routes/: logs.rs  mod.rs  subs.rs
src/subs/: models.rs  services.rs
