[package]
name = "api_mongo_swbox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
mongodb = "3.4.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"

tower-http = { version = "0.6.8", features = ["cors", "limit"] }
chrono = "0.4.42"

dotenvy = "0.15.7"
